# channelci

./: Cargo.toml  Config.example.toml  README.md
common/: Cargo.toml
common/src/: database.rs  lib.rs  models.rs  objects.rs  opcodes.rs  ws.rs
migrations/: 20221201031948_create_all_the_tables.sql  20221202000842_remove_passwords_from_the_runners_table.sql  20221204034717_alter_job_id_to_be_serial.sql  20221206035245_create_installations_and_update_repos.sql  20221207133614_create_job_logs.sql  20221211034928_update_job_logs_to_add_pipes_to_them.sql  20221213134032_update_jobs_to_add_who_and_where_jobs_were_started.sql  20221214232547_add_config_to_repo_table.sql  20230106043509_add_pagination_field_to_jobs.sql  20230127040239_update_spurs_change_name_back_to_pipelines_and_other_misc_changes.sql  20230128200357_update_runners_and_make_them_less_dum.sql  20230130033655_create_credentials_for_stuff_and_update_runners_to_use_it.sql  20230312010915_add_image_and_release_to_pipelines.sql  20230502214444_create_objects_and_phase_out_pipelines.sql  20230503022405_already_changing_it.sql  20230504023107_finally_change_the_repos_table.sql  20230505005908_add_pipelines_to_repo.sql  20230517001446_create_triggers.sql
server/: Cargo.toml
server/src/: cache.rs  cacheable.rs  db.rs  impls.rs  main.rs  objects.rs  redis2.rs  stats.rs
src/: cacheable.rs  config.rs  errors.rs  impls.rs  main.rs  redis2.rs  requests.rs  stats.rs
src/ingest/: jobs.rs  mod.rs  models.rs  runners.rs
src/models/: job.rs  mod.rs  pipelines.rs  repos.rs  runners.rs
src/routes/: jobs.rs  mod.rs  (+1 more)
(+12 files in other folders)
