[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "decimal",
] }
serde_json = { version = "1.0.81", features = ["raw_value"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.66"
actix = "0.13.0"
erased-serde = "0.3.24"
typetag = "0.2.4"
